Added registration endpoint
